--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    tools:context=".HomeActivity">
+    tools:context=".ui.HomeActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
