--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,27 +7,27 @@
 
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.example.beautyappointment.MainActivity"
+        android:name="com.jessyca.beautyappointment.ui.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.beautyappointment.Fragments.HomeFragment"
+        android:name="com.jessyca.beautyappointment.ui.Fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/mapFragment"
-        android:name="com.example.beautyappointment.Fragments.MapFragment"
+        android:name="com.jessyca.beautyappointment.ui.Fragments.MapFragment"
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" />
     <fragment
         android:id="@+id/proceduresFragment"
-        android:name="com.example.beautyappointment.Fragments.ProceduresFragment"
+        android:name="com.jessyca.beautyappointment.ui.Fragments.ProceduresFragment"
         android:label="fragment_procedures"
         tools:layout="@layout/fragment_procedures" />
     <activity
         android:id="@+id/homeActivity"
-        android:name="com.example.beautyappointment.HomeActivity"
+        android:name="com.jessyca.beautyappointment.ui.HomeActivity"
         android:label="layout_update_information"
         tools:layout="@layout/layout_update_information" />
 </navigation>
