--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,23 +7,25 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    tools:context=".HomeActivity">
+    tools:context="com.jHumildes.beautyappointment.HomeActivity">
+
+
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation"
-        ></FrameLayout>
-
-    <androidx.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"></FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorButton"
+        android:background="@color/colorBlue"
         app:itemIconTint="@android:color/white"
-        app:menu="@menu/home_menu" />
+        app:itemTextColor="@android:color/white"
+        app:menu="@menu/home_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
 </RelativeLayout>
