--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg"
     android:padding="8dp"
     app:layout_behavior="android.support.design.widget"
-    tools:context=".MainActivity">
+    tools:context="com.jHumildes.beautyappointment.MainActivity">
 
 
     <Button
