--- a/app/src/main/res/layout/fragment_procedures.xml
+++ b/app/src/main/res/layout/fragment_procedures.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ProceduresFragment">
+    tools:context="com.jHumildes.beautyappointment.Fragments.ProceduresFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
