--- a/app/src/main/res/layout/layout_update_information.xml
+++ b/app/src/main/res/layout/layout_update_information.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground"
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+   >
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -50,7 +52,7 @@
 
         android:layout_marginBottom="17dp"
         android:background="@color/colorButton"
-        android:fontFamily="bellerose"
+        android:fontFamily="@font/bellerose"
         android:text="Update"
         android:textColor="@color/colorText"
         android:textSize="25sp" />
