--- a/app/src/main/res/drawable/rounded_dialog.xml
+++ b/app/src/main/res/drawable/rounded_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#b1aea5"/>
+    <solid android:color="@color/colorLightGreen"/>
 
-    <padding android:bottom="2dp"
+    <padding android:bottom="12dp"
         android:left="2dp"
         android:right="2dp"
         android:top="2dp"/>
