--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -21,8 +21,8 @@
         app:sv_selectedStepNumberColor="@android:color/white"
         app:sv_selectedTextColor="@color/colorBlue"
 
-        app:sv_doneCircleColor="@color/colorAccent"
-        app:sv_doneStepLineColor="@color/colorAccent"
+        app:sv_doneCircleColor="@color/colorLightPink"
+        app:sv_doneStepLineColor="@color/colorLightPink"
         app:sv_doneTextColor="@android:color/white"
         app:sv_doneStepMarkColor="@android:color/white"
 
