--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,17 +5,19 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
+    android:background="@drawable/homeactivity"
+    android:orientation="vertical"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     tools:context="com.jHumildes.beautyappointment.HomeActivity">
-
-
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_above="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
