--- a/app/src/main/res/layout/fragment_booking_step_three.xml
+++ b/app/src/main/res/layout/fragment_booking_step_three.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jHumildes.beautyappointment.BookingActivity"
->
-    <TextView
-        android:layout_width="wrap_content"
+    android:backgroundTint="@color/colorLightGreen"
+    tools:context="com.jHumildes.beautyappointment.BookingActivity">
+    <devs.mulham.horizontalcalendar.HorizontalCalendarView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="STEP 3"
-        android:textSize="30dp"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/calendar_v"
+        android:background="@color/colorBlue"
+        app:textColorSelected="@color/colorPink"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_timeslot"
+        android:layout_marginTop="4dp"/>
 
-</RelativeLayout>
+</LinearLayout>
