--- a/app/src/main/res/layout/fragment_booking_step_two.xml
+++ b/app/src/main/res/layout/fragment_booking_step_two.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_width="match_parent"
+    android:backgroundTint="@color/colorLightGreen"
     android:layout_height="match_parent"
 >
     <androidx.recyclerview.widget.RecyclerView
