--- a/app/src/main/res/layout/fragment_procedures.xml
+++ b/app/src/main/res/layout/fragment_procedures.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bap"
     tools:context="com.jHumildes.beautyappointment.Fragments.ProceduresFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Procedures Fragment" />
+<androidx.viewpager2.widget.ViewPager2
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/viewPager"
+    android:paddingStart="80dp"
+    android:paddingEnd="80dp"/>
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
