--- a/app/src/main/res/layout/fragment_booking_step_four.xml
+++ b/app/src/main/res/layout/fragment_booking_step_four.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bap"
+    android:background="@drawable/beautylogo"
     android:layout_height="match_parent"
     >
 
@@ -16,10 +16,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/rounded_dialog"
+
         android:orientation="vertical"
         android:padding="10dp"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="170dp">
 
         <TextView
             android:layout_width="wrap_content"
